--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,10 @@ flask = "*"
 flask-sqlalchemy = "*"
 flask-migrate = "*"
 pylint-flask = "*"
+python-dotenv = "*"
+requests = "*"
+basilica = "*"
+tweepy = "*"
 
 [requires]
 python_version = "3.8"
